# STM32F405RGT6_SDIO_FATFS

./: CMakeLists.txt  STM32F405RGT6_SDIO_FATFS.ioc  st_nucleo_f4.cfg
Inc/: ffconf.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Src/: diskio.c  gpio.c  main.c  sdio.c  stm32f4xx_it.c
